cabal-version:      3.0
name:               advent-of-code2024
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Farid Zakaria
maintainer:         farid.m.zakaria@gmail.com
category:           Example
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day1
    -- Import common warning flags.
    import:           warnings
    main-is:          Day1.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:  
        base
      , megaparsec
      , containers

    -- Directories containing source files.
    hs-source-dirs:  src

    -- Base language which the package is written in.
    default-language: GHC2021

executable day2
    -- Import common warning flags.
    import:           warnings
    main-is:          Day2.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:  
        base
      , megaparsec
      , containers

    -- Directories containing source files.
    hs-source-dirs:  src

    -- Base language which the package is written in.
    default-language: GHC2021

executable day3
    -- Import common warning flags.
    import:           warnings
    main-is:          Day3.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:  
        base
      , megaparsec
      , containers

    -- Directories containing source files.
    hs-source-dirs:  src

    -- Base language which the package is written in.
    default-language: GHC2021

executable day4
    -- Import common warning flags.
    import:           warnings
    main-is:          Day4.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:  
        base
      , megaparsec
      , containers

    -- Directories containing source files.
    hs-source-dirs:  src

    -- Base language which the package is written in.
    default-language: GHC2021
  
executable day5
  -- Import common warning flags.
  import:           warnings
  main-is:          Day5.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  build-depends:  
      base
    , megaparsec
    , containers
    , parallel

  -- Directories containing source files.
  hs-source-dirs:  src

  -- Base language which the package is written in.
  default-language: GHC2021

executable day6
  -- Import common warning flags.
  import:           warnings
  main-is:          Day6.hs

  ghc-options: -threaded

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  build-depends:  
      base
    , megaparsec
    , containers
    , parallel
    , deepseq

  -- Directories containing source files.
  hs-source-dirs:  src

  -- Base language which the package is written in.
  default-language: GHC2021

executable day7
  -- Import common warning flags.
  import:           warnings
  main-is:          Day7.hs

  ghc-options: -threaded

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  build-depends:  
      base
    , megaparsec
    
  -- Directories containing source files.
  hs-source-dirs:  src

  -- Base language which the package is written in.
  default-language: GHC2021

executable day8
  -- Import common warning flags.
  import:           warnings
  main-is:          Day8.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  build-depends:  
      base
    , megaparsec
    
  -- Directories containing source files.
  hs-source-dirs:  src

  -- Base language which the package is written in.
  default-language: GHC2021